--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Add the following line to enable debugging information
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g ")
 
 # Find and link against the threading library
 set(THREADS_PREFER_PTHREAD_FLAG ON)
@@ -15,6 +15,7 @@ find_package(Threads REQUIRED)
 
 file(GLOB CPP_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp"
 )
 
 # Add headers
